> Fixes storybook overflow

--- a/.storybook/storybook.styl
+++ b/.storybook/storybook.styl
@@ -11,6 +11,7 @@ body
 .storybook-preview-container
   height 100%
   height calc(100% - 30px)
+  min-height 100vh
   padding 15px
   overflow scroll
 
